deploy/k8s/local/invoice/invoice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-api
spec:
  selector:
      matchLabels:
        app: invoice-api
  replicas: 3
  template:
      metadata:
        labels:
            app: invoice-api
      spec:
        containers:
        - name: invoice-api
          image: vany0114/duber.invoice.api
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
          - containerPort: 32776
