deploy/k8s/local/invoice/invoice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: invoice
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: invoice.local.com
    http:
      paths:
      - path: /
        backend:
          serviceName: invoice
          servicePort: 80
